# rm-personal-cloud

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.multiarch  README.md  TODO.md  build.rs  rustfmt.toml  schema.sql  test.py
.github/workflows/: build_images.yml
admin-webapp/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
admin-webapp/src/: app.tsx  index.tsx
src/: auth.rs  config.rs  database.rs  main.rs  notifications.rs  request_logger.rs
src/api/: admin.rs  auth.rs  mod.rs  storage.rs
