[package]
authors = ["fpgaminer <fpgaminer@bitcoin-mining.com>"]
description = "A replacement cloud server for the reMarkable tablet that you can run and manage yourself."
edition = "2018"
keywords = [
    "cloud",
    "remarkable",
]
license = "MIT"
name = "rm-personal-cloud"
readme = "README.md"
repository = "https://github.com/fpgaminer/rm-personal-cloud"
version = "0.1.0"

[dependencies]
actix = "0.10.0"
actix-http = "2.2.0"
actix-web-actors = "3.0.0"
anyhow = "1.0.40"
env_logger = "0.8.3"
futures = "0.3"
hex = "0.4.3"
jsonwebtoken = "7.2.0"
log = "0.4.14"
notify = "4.0.16"
rand = "0.8.3"
ring = "0.16.20"
rustls = "0.18.1"
serde_json = "1.0.64"
structopt = "0.3.21"

[dependencies.actix-web]
features = ["rustls"]
version = "3.3.2"

[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dependencies.serde]
features = ["derive"]
version = "1.0.125"

[dependencies.sqlx]
features = [
    "sqlite",
    "runtime-actix-rustls",
]
version = "0.4"
