[package]
authors = ["fpgaminer <fpgaminer@bitcoin-mining.com>"]
description = "A replacement cloud server for the reMarkable tablet that you can run and manage yourself."
edition = "2018"
keywords = [
    "cloud",
    "remarkable",
]
license = "MIT"
name = "rm-personal-cloud"
readme = "README.md"
repository = "https://github.com/fpgaminer/rm-personal-cloud"
version = "0.1.0"
homepage = "https://github.com/fpgaminer/rm-personal-cloud"
documentation = "https://docs.rs/rm-personal-cloud"
build = "build.rs"

[dependencies]
actix = "0.10.0"
actix-http = "2.2.2"
actix-web-actors = "3.0.0"
anyhow = "1.0.57"
env_logger = "0.8.4"
futures = "0.3"
hex = "0.4.3"
jsonwebtoken = "7.2.0"
log = "0.4.17"
notify = "4.0.17"
rand = "0.8.5"
ring = "0.16.20"
rustls = "0.18.1"
serde_json = "1.0.81"
structopt = "0.3.26"

[dependencies.actix-web]
features = ["rustls"]
version = "3.3.3"

[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dependencies.serde]
features = ["derive"]
version = "1.0.137"

[dependencies.sqlx]
features = [
    "sqlite",
    "runtime-actix-rustls",
]
version = "0.4"

[build-dependencies]
ignore = "0.4.18"
