[package]
authors = ["fpgaminer <fpgaminer@bitcoin-mining.com>"]
description = "A replacement cloud server for the reMarkable tablet that you can run and manage yourself."
edition = "2018"
keywords = [
    "cloud",
    "remarkable",
]
license = "MIT"
name = "rm-personal-cloud"
readme = "README.md"
repository = "https://github.com/fpgaminer/rm-personal-cloud"
version = "0.1.0"
homepage = "https://github.com/fpgaminer/rm-personal-cloud"
documentation = "https://docs.rs/rm-personal-cloud"
build = "build.rs"

[dependencies]
actix = "0.13.0"
actix-http = "3.0.4"
actix-web-actors = "4.1.0"
anyhow = "1.0.57"
env_logger = "0.9.0"
futures = "0.3"
hex = "0.4.3"
jsonwebtoken = "8.1.1"
log = "0.4.17"
notify = "4.0.17"
rand = "0.8.5"
ring = "0.16.20"
rustls = "0.20.6"
rustls-pemfile = "1.0.0"
serde_json = "1.0.81"
clap = { version = "3.0", features = ["derive"] }
mime = "0.3"

[dependencies.actix-web]
features = ["rustls"]
version = "4.0.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dependencies.serde]
features = ["derive"]
version = "1.0.137"

[dependencies.sqlx]
features = [
    "sqlite",
    "runtime-actix-rustls",
]
version = "0.5.13"

[build-dependencies]
ignore = "0.4.18"
